<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activities.RincianActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/frame">

                <ImageView
                    android:id="@+id/iv_konten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image"
                    android:adjustViewBounds="true"
                    android:background="@color/white"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/tv_nama_konten"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/text1"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#4D000000"
                    android:textSize="20sp"
                    android:padding="15dp"
                    android:text="@string/nama_konten"
                    android:textStyle="bold"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/tv_kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="#4D000000"
                    android:textSize="20sp"
                    android:padding="15dp"
                    android:text="@string/kategori"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    tools:ignore="RtlHardcoded" />
            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                style="@style/style"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/tv_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style"

                android:layout_marginTop="10dp"
                android:text="@string/isi_deskripsi"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"/>
        </LinearLayout>

</androidx.core.widget.NestedScrollView>