<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_konten"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/image_konten"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="5dp" />
            <TextView
                android:id="@+id/tv_nama_konten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/style"
                android:layout_toEndOf="@+id/iv_konten"
                android:text="@string/nama_konten"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@+id/tv_nama_konten"
                android:layout_alignStart="@+id/tv_nama_konten" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori_"
                    android:textColor="@color/colorAccent"/>
                <TextView
                    android:id="@+id/tv_kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/style"
                    android:text="@string/isi_kategori"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <TextView
                    android:id="@+id/tv_rincian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
                <TextView
                    android:id="@+id/tv_gambar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>